--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "exp-config",
   "description": "Simple configuration management",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "AB Kvällstidningen Expressen",
   "contributors": [
     "Gabriel Falkenberg <gabriel.falkenberg@gmail.com>",
     "Jens Carlén",
-    "Joel Abrahamsson <mail@joelabrahamsson.com>"
+    "Joel Abrahamsson <mail@joelabrahamsson.com>",
+    "William Sköld <william.skold@gmail.com>"
   ],
   "scripts": {
     "test": "mocha --reporter spec && jshint ."
@@ -21,7 +22,8 @@
     "url": "http://github.com/ExpressenAB/exp-config/raw/master/LICENSE"
   },
   "dependencies": {
-    "dotenv": "~0.5.1"
+    "dotenv": "~0.5.1",
+    "lodash": "^3.6.0"
   },
   "devDependencies": {
     "mocha": "~2.1.0",
