--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "exp-config",
   "description": "Simple configuration management",
-  "version": "1.3.2",
+  "version": "2.0.0",
   "author": "AB Kvällstidningen Expressen",
   "contributors": [
     "Gabriel Falkenberg <gabriel.falkenberg@gmail.com>",
@@ -10,7 +10,7 @@
     "William Sköld <william.skold@gmail.com>"
   ],
   "scripts": {
-    "test": "mocha --reporter spec && jshint ."
+    "test": "mocha --reporter spec && eslint . --cache"
   },
   "main": "index.js",
   "repository": "git://github.com/ExpressenAB/exp-config.git",
@@ -22,13 +22,12 @@
     "url": "http://github.com/ExpressenAB/exp-config/raw/master/LICENSE"
   },
   "dependencies": {
-    "dotenv": "~2.0.0",
-    "lodash.assign": "^4.2.0"
+    "dotenv": "~2.0.0"
   },
   "devDependencies": {
-    "mocha": "~3.0.2",
     "chai": "~3.5.0",
-    "jshint": "~2.9.3"
+    "eslint": "^3.3.1",
+    "mocha": "~3.0.2"
   },
   "files": [
     "index.js",
