--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "dependencies": {
     "dotenv": "~2.0.0"
   },
+  "engines": {
+    "node": ">=4"
+  },
   "devDependencies": {
     "chai": "~3.5.0",
     "eslint": "^3.3.1",
