--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "exp-config",
   "description": "Simple configuration management",
-  "version": "2.0.2",
+  "version": "3.0.0",
   "author": "AB Kvällstidningen Expressen",
   "contributors": [
     "Gabriel Falkenberg <gabriel.falkenberg@gmail.com>",
@@ -26,10 +26,20 @@
     "dotenv": "~8.2.0",
     "lodash.merge": "^4.6.2"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "devDependencies": {
     "chai": "~4.2.0",
     "eslint": "^6.8.0",
-    "mocha": "~7.1.1"
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "mocha": "~7.1.1",
+    "prettier": "^2.0.4",
+    "pretty-quick": "^2.0.1"
   },
   "files": [
     "index.js",
