--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,115 +1,6 @@
 {
-  "parserOptions": {
-    "ecmaVersion": 2020
-  },
-  "env": {
-    "node": true,
-    "es6": true
-  },
-  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
-  "plugins": ["prettier"],
-  "rules": {
-    "prettier/prettier": "error",
-    "arrow-body-style": ["error", "as-needed"],
-    "arrow-parens": "error",
-    "arrow-spacing": "error",
-    "brace-style": [
-      "error",
-      "1tbs",
-      {
-        "allowSingleLine": false
-      }
-    ],
-    "comma-spacing": "error",
-    "curly": ["error", "multi-line"],
-    "dot-notation": [
-      "error",
-      {
-        "allowKeywords": true
-      }
-    ],
-    "eol-last": "error",
-    "eqeqeq": "error",
-    "key-spacing": [
-      "error",
-      {
-        "beforeColon": false,
-        "afterColon": true
-      }
-    ],
-    "keyword-spacing": "error",
-    "new-parens": "error",
-    "no-alert": "error",
-    "no-array-constructor": "error",
-    "no-caller": "error",
-    "no-catch-shadow": "error",
-    "no-console": "warn",
-    "no-eval": "error",
-    "no-extend-native": "error",
-    "no-extra-bind": "error",
-    "no-extra-parens": ["error", "functions"],
-    "no-implied-eval": "error",
-    "no-iterator": "error",
-    "no-label-var": "error",
-    "no-labels": "error",
-    "no-lone-blocks": "error",
-    "no-loop-func": "error",
-    "no-multi-spaces": "error",
-    "no-multi-str": "error",
-    "no-native-reassign": "error",
-    "no-new": "error",
-    "no-new-func": "error",
-    "no-new-object": "error",
-    "no-new-wrappers": "error",
-    "no-octal-escape": "error",
-    "no-path-concat": "error",
-    "no-process-exit": "error",
-    "no-proto": "error",
-    "no-return-assign": "error",
-    "no-script-url": "error",
-    "no-sequences": "error",
-    "no-shadow": "error",
-    "no-shadow-restricted-names": "error",
-    "no-spaced-func": "error",
-    "no-trailing-spaces": "error",
-    "no-undef-init": "error",
-    "no-underscore-dangle": 0,
-    "no-unused-expressions": "error",
-    "no-use-before-define": ["error", "nofunc"],
-    "no-var": "error",
-    "no-with": "error",
-    "prefer-arrow-callback": "error",
-    "prefer-const": [
-      "error",
-      {
-        "destructuring": "all"
-      }
-    ],
-    "prefer-template": "warn",
-    "quotes": [
-      "error",
-      "double",
-      {
-        "avoidEscape": true
-      }
-    ],
-    "semi": ["error", "always"],
-    "semi-spacing": [
-      "error",
-      {
-        "before": false,
-        "after": true
-      }
-    ],
-    "space-infix-ops": "error",
-    "space-unary-ops": [
-      "error",
-      {
-        "words": true,
-        "nonwords": false
-      }
-    ],
-    "strict": ["error", "global"],
-    "yoda": ["error", "never"]
-  }
+  "root": true,
+  "extends": [
+    "eslint-config-exp"
+  ]
 }
