--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "exp-config",
   "description": "Simple configuration management",
-  "version": "3.0.1",
+  "version": "4.0.0",
   "author": "Bonnier News",
   "contributors": [
     "Gabriel Falkenberg <gabriel.falkenberg@gmail.com>",
@@ -26,20 +26,11 @@
     "dotenv": "~8.2.0",
     "lodash.merge": "^4.6.2"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
-  },
   "devDependencies": {
     "chai": "~4.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.3",
-    "husky": "^4.2.5",
-    "mocha": "~7.1.1",
-    "prettier": "^2.0.4",
-    "pretty-quick": "^2.0.1"
+    "eslint": "^8.8.0",
+    "eslint-config-exp": "^0.0.9",
+    "mocha": "^9.2.0"
   },
   "files": [
     "index.js",
